tests/spec/compile-fail/014_shared_array_slice.zn
// category: compile-fail
// profile: freestanding
// purpose: ArraySlice cannot be stored in Shared

module tests.fail.sharedArraySlice;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.{Result, Ok};

fn bad(bytes: ArraySlice<U8>, mut allocator: GlobalAllocator) -> Result<Unit, AllocError> {
    val shared = Shared.newIn(bytes, mut allocator); // expected-error: ArraySlice cannot be stored in Shared
    val ignoredShared = shared;
    return Ok(());
}
